# HybridResNet50V2-RViT

./: .gitignore  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  PACKAGE_README.md  README.md  additional.txt  app.py  dataset_prep.ipynb  hybrid-model-cnn-transformer-with-pfdA-gsteA.ipynb  pyproject.toml  requirements.txt  run_training.ipynb
.tmp.driveupload/: 47731  47751  47753  47755  47757  47759  47761  47763  47767  47769  47771  47773  47777  47779  47781  47785  47787  47789  47793  47795  47797  47801  47803  47805  47809  47811  47813  47817  47819  47823
Hybrid-model-with-pfdA-gsteA/: Hybrid-A.py  Hybrid-model-A.ipynb  Xai-A.py  best_model.pt  history.csv  hybrid-A.py  metrics.json  train-A.py
Hybrid-model-with-pfdB-gsteB/: Hybrid-B.py  Hybrid-model-B.ipynb  Xai-B.py  best_model.pt  history.csv  metrics (2).json  train-B.py
Hybrid-model-without-pfdA-gsteA/: Hybrid-model-A-ablation.ipynb  Hybrid-without-A.py  Xai-without-A.py  best_model.pt  history (1).csv  metrics (1).json  train-without-A.py
Hybrid-model-without-pfdB-gsteB/: Hybrid-model-B-ablation.ipynb  Hybrid-without-B.py  Xai-without-B.py  best_model.pt  history.csv  metrics (2).json  train-without-B.py
Misclassified-results/: all_models_predictions_test.csv  misclassified_h1_with_pfda_gstea.csv  misclassified_h1_without_pfda_gstea.csv  misclassified_h2_with_pfdB_gsteB.csv  misclassified_h2_without_pfdB_gsteB.csv  misclassifiedimages.ipynb  model_disagreements_test.csv
data/: README.md
docs/: dataset_prep.md
explainability/: xai.py  xai_generate.py
models/: hybrid.py  rvit.py  (+3 more)
(+39 files in other folders)
