[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pfd-gste"
version = "0.1.0"
description = "Reusable PyTorch modules for pathology-focused feature gating and guided token reweighting."
readme = { file = "PACKAGE_README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
{ name = "Riya Basak" }
]
keywords = [
"pytorch",
"deep-learning",
"medical-imaging",
"computer-vision",
"cnn",
"vision-transformer",
"pathology-guidance",
"token-guidance"
]
classifiers = [
"Development Status :: 3 - Alpha",
"Intended Audience :: Science/Research",
"Intended Audience :: Developers",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Operating System :: OS Independent",
"Topic :: Scientific/Engineering :: Artificial Intelligence",
"Topic :: Scientific/Engineering :: Image Processing"
]
dependencies = [
"torch>=2.0"
]

[project.optional-dependencies]
test = [
"pytest>=8"
]

[project.urls]
Homepage = "https://github.com/AnnyaB/HybridResNet50V2-RViT"
Repository = "https://github.com/AnnyaB/HybridResNet50V2-RViT"
Issues = "https://github.com/AnnyaB/HybridResNet50V2-RViT/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["pfd_gste*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
